--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,14 +20,17 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@primeuix/themes": "^2.0.2",
+    "@primevue/forms": "^4.5.1",
     "@vueuse/core": "^14.1.0",
     "date-fns": "^4.1.0",
     "ofetch": "^1.5.1",
     "pinia": "^3.0.4",
     "primeicons": "^7.0.0",
     "primevue": "^4.5.1",
+    "tailwindcss-primeui": "^0.6.1",
     "vue": "^3.5.25",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@tsconfig/node24": "^24.0.3",
