feat: Integrate Tailwind CSS for styling, implement form validation with Zod in login and registration views, and refactor components for improved user experience

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,12 +21,14 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@primeuix/themes": "^2.0.2",
     "@primevue/forms": "^4.5.1",
+    "@tailwindcss/vite": "^4.1.17",
     "@vueuse/core": "^14.1.0",
     "date-fns": "^4.1.0",
     "ofetch": "^1.5.1",
     "pinia": "^3.0.4",
     "primeicons": "^7.0.0",
     "primevue": "^4.5.1",
+    "tailwindcss": "^4.1.17",
     "tailwindcss-primeui": "^0.6.1",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3",
